--- a/lectures/syntax/HW01/ex1.tex
+++ b/lectures/syntax/HW01/ex1.tex
@@ -1,32 +1,49 @@
 \section{Konstituententests}
 
 Weisen Sie anhand von jeweils min. drei Konstituententests nach, dass
-1. die geklammerten Ausdrücke keine Konstituenten bilden:
-• Gestern habe ich im Hof [eine Stunde lang ein neues] Auto angesehen.
-Fragetest: Wie habe ich im Hof Auto angesehen? - Kein Deutsch.
-Permutationstest: [eine Stunde lang ein neues] Gestern habe ich im Hof Auto angesehen. - Was?
-Koordinationstest: Gestern habe ich im Hof [eine Stunde lang ein neues] und [eine Stunde lang ein altes] Auto angesehen. - Hmmm? Uneindeutig.
-• Neulich haben im Hof [den ganzen Tag vier fröhliche] Kinder gespielt.
 
-2. die geklammerten Ausdrücke eine Konstituente bilden:
-• [Gestern] haben im Hof Kinder gespielt.
-Eliminierungstest: Haben im Hof Kinder gespielt? \textit{Semantik verändert}
-Fragetest: Wann haben die Kinder im Hof gespielt? - Gestern
-Koordinationstest: Gestern und Heute haben die Kinder im Hof gespielt.
+\subsection{die geklammerten Ausdrücke keine Konstituenten bilden:}
 
-• Gestern haben im Hof [Kinder] gespielt.
-Eliminierungstest: Gestern haben im Hof gespielt? \textit{Subjekt fehlt}
-Fragetest: Wer hat gestern im Hof gespielt? - Kinder
-Koordinationstest: Gestern und Heute haben die Kinder und Nachbarskinder im Hof gespielt.
+Gestern habe ich im Hof [eine Stunde lang ein neues] Auto angesehen.
+\begin{itemize}
+  \item Fragetest: Wie habe ich im Hof Auto angesehen? - Kein Deutsch.
+  \item Permutationstest: [eine Stunde lang ein neues] Gestern habe ich im Hof Auto angesehen. - Was?
+  \item Koordinationstest: Gestern habe ich im Hof [eine Stunde lang ein neues] und [eine Stunde lang ein altes] Auto angesehen. - Hmmm? Uneindeutig.
+\end{itemize}
+
+Neulich haben im Hof [den ganzen Tag vier fröhliche] Kinder gespielt.
+
+
+\subsection{die geklammerten Ausdrücke eine Konstituente bilden:}
+[Gestern] haben im Hof Kinder gespielt.
+\begin{itemize}
+  \item Eliminierungstest: Haben im Hof Kinder gespielt? \textit{Semantik verändert}
+  \item Fragetest: Wann haben die Kinder im Hof gespielt? - Gestern
+  \item Koordinationstest: Gestern und Heute haben die Kinder im Hof gespielt.
+\end{itemize}
+
+
+Gestern haben im Hof [Kinder] gespielt.
+\begin{itemize}
+  \item Eliminierungstest: Gestern haben im Hof gespielt? \textit{Subjekt fehlt}
+  \item Fragetest: Wer hat gestern im Hof gespielt? - Kinder
+  \item Koordinationstest: Gestern und Heute haben die Kinder und Nachbarskinder im Hof gespielt.
+\end{itemize}
 Permutationstest: Kinder Gestern und Heute haben die Kinder und Nachbarskinder im Hof gespielt.
 
-3. die geklammerten Ausdrücke eine (zwar) diskontinuierliche Konstituente (aber eben doch eine Konstituente) bilden:
-• Ich habe dort [viele Möglichkeiten] gesehen, [die zum Ziel führen].
-Permutationstest: Ich habe dort [viele Möglichkeiten], [die zum Ziel führen], gesehen.
-Eliminierungstest: Ich habe dort gesehen, [die zum Ziel führen].
-Eliminierungstest: Ich habe dort [viele Möglichkeiten] gesehen.
+\subsection{die geklammerten Ausdrücke eine (zwar) diskontinuierliche Konstituente (aber eben doch eine Konstituente) bilden:}
+
+Ich habe dort [viele Möglichkeiten] gesehen, [die zum Ziel führen].
+\begin{itemize}
+  \item Permutationstest: Ich habe dort [viele Möglichkeiten], [die zum Ziel führen], gesehen.
+  \item Eliminierungstest: Ich habe dort gesehen, [die zum Ziel führen].
+  \item Eliminierungstest: Ich habe dort [viele Möglichkeiten] gesehen.
+\end{itemize}
 -> Es fällt auf, dass, dass der zweite Teil der Konstituente weggelassen werden kann.
-• [Möglichkeiten] wird es [viele] geben, [die zum Ziel führen].
-Permutationstest: [Möglichkeiten], [die zum Ziel führen], wird es [viele] geben.
-Koordinationstest: [Möglichkeiten] wird es [viele] geben, [die zum Ziel führen].
-Fragetest: Was wird es geben? - Viele Möglichkeiten, die zum Ziel führen.
+
+[Möglichkeiten] wird es [viele] geben, [die zum Ziel führen].
+\begin{itemize}
+  \item Permutationstest: [Möglichkeiten], [die zum Ziel führen], wird es [viele] geben.
+  \item Koordinationstest: [Möglichkeiten] wird es [viele] geben, [die zum Ziel führen].
+  \item Fragetest: Was wird es geben? - Viele Möglichkeiten, die zum Ziel führen.
+\end{itemize}
