Complete homework 1 syntax

--- a/lectures/syntax/HW01/HW01.tex
+++ b/lectures/syntax/HW01/HW01.tex
@@ -17,9 +17,9 @@
 \newcounter{magicrownumbers}
 \newcommand\rownumber{\stepcounter{magicrownumbers}\arabic{magicrownumbers}}
 
-\title{ECL Uni HD - WS17/18 - Exercise Sheet 8}
+\title{FSyn - SS18 - HA01}
 
-\author{Wirth, Jan Nikolaus - 4014061}
+\author{Wirth, Jan Nikolaus - 4016061}
 
 \date{\today}
 
