--- a/lectures/syntax/HW01/ex2.tex
+++ b/lectures/syntax/HW01/ex2.tex
@@ -12,7 +12,7 @@ Geben Sie für die folgenden einfachen Nominalphrasen und Verbalphrasen jeweils
 \end{itemize}
 
 \pagebreak
-\Tree[.NP [.NP [.Det die ] [.NP [.Adj neuen ] [.N Geschäfte ] ] ] [.PP [.Prep in ] [.NP [.Det der ] [.N Ladenzeile ] ] ] ]
+\Tree[.NP [.NP [.Det die ] [.NP [.Adj neuen ] [.N \textbf{Geschäfte} ] ] ] [.PP [.Prep in ] [.NP [.Det der ] [.N Ladenzeile ] ] ] ]
 \begin{verbatim}
 NP -> Adj N
 NP -> Det N
@@ -22,7 +22,7 @@ PP -> Prep NP
 \end{verbatim}
 \vspace{1cm}
 
-\Tree[.NP [.NP [.Adj berühmte ] [.P Hersteller ] ] [.PP [.Prep von ] [.P Sportkleidung ] ] ]
+\Tree[.NP [.NP [.Adj berühmte ] [.P \textbf{Hersteller} ] ] [.PP [.Prep von ] [.P Sportkleidung ] ] ]
 \begin{verbatim}
 NP -> Adj P
 NP -> NP PP
@@ -30,7 +30,7 @@ PP -> Prep P
 \end{verbatim}
 \vspace{1cm}
 
-\Tree[.NP [.Part sehr ] [.NP [.Adj eingängige ] [.N Musik ] ] ]
+\Tree[.NP [.Part sehr ] [.NP [.Adj eingängige ] [.N \textbf{Musik} ] ] ]
 \begin{verbatim}
 NP -> Adj N
 NP -> Part NP
@@ -38,34 +38,34 @@ NP -> Part NP
 \vspace{1cm}
 
 
-\Tree[.AP [.PP [.Prep auf ] [.NP [.Pron seine ] [.N Schwester ] ] ] [.Adj eifersüchtig ]]
+\Tree[.AP [.PP [.Prep auf ] [.NP [.Pron seine ] [.N Schwester ] ] ] [.Adj \textbf{eifersüchtig} ]]
 \begin{verbatim}
 
 AP -> PP Adj
 NP -> Pron N
 PP -> Prep NP
 \end{verbatim}
-\Tree[.PP [.Prep unter ] [.NP [.Det der ] [.N Brücke ] ]]
+\Tree[.PP [.Prep \textbf{unter} ] [.NP [.Det der ] [.N Brücke ] ]]
 \begin{verbatim}
 NP -> Det N
 PP -> Prep NP
 \end{verbatim}
 \vspace{1cm}
 
-\Tree[.PP [.Prep bis ] [.PP [.Prep zur ] [.NP [.Adj nächsten ] [.N Ecke ] ] ] ]
+\Tree[.PP [.Prep bis ] [.PP [.Prep \textbf{zur} ] [.NP [.Adj nächsten ] [.N Ecke ] ] ] ]
 \begin{verbatim}
 NP -> Adj N
 PP -> Prep NP
 PP -> Prep PP
 \end{verbatim}
-\Tree[.VP [ (weil sie) ] [.VP [.NP [.Det die ] [.N Sache ] ]  [.VP [.Adv klar ] [.V durchschaut ] ] ] ]
+\Tree[.VP [ (weil sie) ] [.VP [.NP [.Det die ] [.N Sache ] ]  [.VP [.Adv klar ] [.V \textbf{durchschaut}  ] ] ] ]
 \begin{verbatim}
 NP -> Det N
 VP -> Adv V
 VP -> NP VP
 VP -> VP VP
 \end{verbatim}
-\Tree[.VP [ (dass er) ] [.NP [.NP [.Det dieses ] [.N Thema ] ] [.PP [.Prep aus ] [.NP [.Pron seinem ]  [.N Kurs ] ] ] ] [.VP [.Adv gut ] [.V kennt ]  ] ]
+\Tree[.VP [ (dass er) ] [.NP [.NP [.Det dieses ] [.N Thema ] ] [.PP [.Prep aus ] [.NP [.Pron seinem ]  [.N Kurs ] ] ] ] [.VP [.Adv gut ] [.V \textbf{kennt} ]  ] ]
 \begin{verbatim}
 NP -> Det N
 NP -> NP PP
