--- a/lectures/syntax/HW01/ex4.tex
+++ b/lectures/syntax/HW01/ex4.tex
@@ -3,5 +3,32 @@ Bestimmen Sie das Subjekt in folgenden Satzen. Welche Kriterien benutzen Sie?
 \begin{enumerate}
   \item Der Zug fährt im Bahnhof ein.
   \item Dem Schaffner ist nicht zu helfen.
-  \item Dem Schaffner gefällt seine neue Dienstmütze. 4. ... dass den Kindern Bücher geschenkt wurden. 5. ... dass Fritz Maria Bücher schenkt.
+  \item Dem Schaffner gefällt seine neue Dienstmütze.
+  \item ... dass den Kindern Bücher geschenkt wurden.
+  \item ... dass Fritz Maria Bücher schenkt.
+\end{enumerate}
+
+\begin{enumerate}
+  \item Der \textbf{Zug} fährt im Bahnhof ein. \begin{itemize}
+  	\item Frage: Wer fährt in den Bahnhof ein?
+  	\item Kongruenz: mit finitem Verb `gefällt'
+  	\item Kasus: Nominativ
+  \end{itemize}
+
+  \item Dem Schaffner ist nicht zu helfen.
+  \item Dem Schaffner gefällt seine neue \textbf{Dienstmütze}. \begin{itemize}
+  	\item Frage: Was gefällt?
+  	\item Kongruenz: mit finitem Verb `Mütze gefällt'
+  	\item Kasus: Nominativ `Die Mütze'
+  \end{itemize}
+  \item ... dass den Kindern \textbf{Bücher} geschenkt wurden. \begin{itemize}
+  	\item Frage: Was wird geschenkt? Bücher.
+  	\item Kongruenz: mit finitem Verb `Die Bücher werden geschenkt'
+  	\item Kasus: Nominativ `Die Bücher'
+  \end{itemize}
+  \item ... dass \textbf{Fritz} Maria Bücher schenkt. \begin{itemize}
+  	\item Frage: Wer schenkt Bücher?
+  	\item Kongruenz: mit finitem Verb `Fritz schenkt'
+  	\item Kasus: Nominativ
+  \end{itemize}
 \end{enumerate}
