Fix exercise numbering

--- a/lectures/syntax/HW01/ex2.tex
+++ b/lectures/syntax/HW01/ex2.tex
@@ -1,4 +1,4 @@
-\subsection{Phrasenstruktur}
+\section{Phrasenstruktur}
 Geben Sie für die folgenden einfachen Nominalphrasen und Verbalphrasen jeweils eine moglichst generelle Konstituentenstruktur und eine entsprechende Phrasenstrukturregel an. Markieren Sie jeweils den Kopf der Phrase.
 \begin{itemize}
   \item NP: die neuen Geschäfte in der Ladenzeile
