--- a/lectures/algos_data_structures/Exercise01.ipynb
+++ b/lectures/algos_data_structures/Exercise01.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -153,7 +153,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.1622776601683795\n",
       "mysqrt does not work on negative numbers, you fool!\n",
       "mysqrt does not work on negative numbers, you fool!\n",
       "i mod 5 = 0\n",
@@ -231,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -270,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -294,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -414,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -426,15 +425,7 @@
      "solution": true
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from math import ceil, sqrt, floor\n",
     "\n",
@@ -442,16 +433,17 @@
     "    if positions <= 0:\n",
     "        raise ValueError\n",
     "    tries = positions\n",
-    "    allowed_to_break = 2\n",
+    "    ALLOWED_TO_BREAK = 2\n",
+    "    allowed_to_break = ALLOWED_TO_BREAK\n",
     "    while(allowed_to_break > 0):\n",
     "        tries = ceil(tries / 2) # ceiling because we can not rule out more than half the optiosn\n",
     "        allowed_to_break = allowed_to_break - 1 # one glass broke\n",
-    "    return tries - 1 # median position does not need to be tried out"
+    "    return tries - 1 + ALLOWED_TO_BREAK # median position does not need to be tried out, add two broken glasses back to tries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -477,14 +469,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7\n"
+      "9\n"
      ]
     }
    ],
@@ -516,7 +508,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
