Do some more algo homework

--- a/lectures/algos_data_structures/Exercise01.ipynb
+++ b/lectures/algos_data_structures/Exercise01.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "NAME = \"Jan Wirth (4016061)\"\n",
-    "COLLABORATORS = \"\""
+    "COLLABORATORS = \"Björn Steinorth\""
    ]
   },
   {
