--- a/lectures/algos_data_structures/Exercise02.ipynb
+++ b/lectures/algos_data_structures/Exercise02.ipynb
@@ -11,12 +11,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "NAME = \"Jan Wirth\"\n",
-    "COLLABORATORS = \"\""
+    "COLLABORATORS = \"Björn Steinorth\""
    ]
   },
   {
@@ -4021,7 +4021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -4033,74 +4033,7 @@
      "solution": true
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "True\n",
-      "[None]\n",
-      "item at 0 None True\n",
-      "INSERTING 1 at 0\n",
-      "to insert int [1] 1\n",
-      "[1]\n",
-      "item at 0 1 False\n",
-      "item at 1 None True\n",
-      "INSERTING 2 at 1\n",
-      "to insert int [1, 2] 2\n",
-      "[1, 2]\n",
-      "item at 0 1 False\n",
-      "item at 1 2 False\n",
-      "item at 2 None True\n",
-      "INSERTING 3 at 2\n",
-      "to insert int [1, 2, 3, None] 3\n",
-      "[1, 2, 3, None]\n",
-      "item at 0 1 False\n",
-      "item at 1 2 False\n",
-      "item at 2 3 False\n",
-      "item at 3 None True\n",
-      "INSERTING 4 at 3\n",
-      "to insert int [1, 2, 3, 4] 4\n",
-      "[1, 2, 3, 4]\n",
-      "item at 0 1 False\n",
-      "item at 1 2 False\n",
-      "item at 2 3 False\n",
-      "item at 3 4 False\n",
-      "item at 4 None True\n",
-      "INSERTING 5 at 4\n",
-      "to insert int [1, 2, 3, 4, 5, None, None, None] 5\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-38-381cf2b12bea>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     97\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata_\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     98\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata_\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 99\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata_\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    100\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    101\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpopLast\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class UniversalContainer:\n",
     "    \n",
@@ -4118,17 +4051,13 @@
     "    \n",
     "    # add item at the end\n",
     "    def push(self, item):\n",
-    "        print(self.data_)\n",
     "        if self.size_ == self.capacity_:\n",
     "            self.capacity_ = self.capacity_ + self.capacity_\n",
     "            self.data_ = self.data_ + [None]*self.size_\n",
     "        for idx, fieldItem in enumerate(self.data_):\n",
-    "            print('item at', idx, fieldItem, None == fieldItem)\n",
     "            if fieldItem == None:\n",
-    "                print('INSERTING', item, 'at', idx)\n",
     "                self.data_[idx] = item\n",
     "                break\n",
-    "        print('to insert int', self.data_, item)\n",
     "        self.size_ += 1\n",
     "            \n",
     "        \n",
@@ -4137,87 +4066,44 @@
     "    def popFirst(self):\n",
     "        item = self.data_[0]\n",
     "        self.data_.remove(1)\n",
+    "        self.data_.append(None)\n",
+    "        self.size_ -= 1\n",
     "        return item\n",
     "        \n",
     "    # remove last element\n",
     "    def popLast(self):\n",
     "    \n",
     "        for idx, fieldItem in enumerate(self.data_):\n",
-    "            print('item at', idx, fieldItem, None == fieldItem)\n",
     "            if fieldItem == None:\n",
     "                item = self.data_[idx - 1]\n",
-    "                self.data_.remove(idx - 2)\n",
-    "                self.data_.push(None)\n",
+    "                self.data_.remove(idx + 1)\n",
+    "                self.data_.append(None)\n",
+    "                self.size_ -= 1\n",
+    "                return item\n",
     "        \n",
     "    # __getitem__ implements v = c[index]\n",
     "    def __getitem__(self, index):     \n",
     "        if index < 0 or index >= self.size_:\n",
     "            raise RuntimeError(\"index out of range\")\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        return self.data_[index]\n",
     "    \n",
     "    # __setitem__ implements c[index] = v\n",
     "    def __setitem__(self, index, v):  \n",
     "        if index < 0 or index >= self.size_:\n",
     "            raise RuntimeError(\"index out of range\")\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        self.data_[index] = v\n",
     "    \n",
     "    # read first element\n",
     "    def first(self):\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        return self.data_[0]\n",
     "    \n",
     "    # read last element\n",
     "    def last(self):\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
-    "\n",
-    "        \n",
-    "c = UniversalContainer()\n",
-    "print(c.size() == 0)\n",
-    "print(c.capacity() == 1)\n",
-    "c.push(1)\n",
-    "c.push(2)\n",
-    "c.push(3)\n",
-    "c.push(4)\n",
-    "c.push(5)\n",
-    "print(c.size() == 5)\n",
-    "print(c.capacity() == 8)\n",
-    "print(c.data_[0] == 1)\n",
-    "print(c.data_[1] == 2)\n",
-    "print(c.data_[2] == 3)\n",
-    "print(c.data_[3] == 4)\n",
-    "print(c.data_[4] == 5)\n",
-    "print(c.data_[5] == None)\n",
-    "print(c.data_[6] == None)\n",
-    "print(c.data_[7] == None)\n",
-    "c.popFirst()\n",
-    "print(c.data_[0] == 2)\n",
-    "print(c.data_[1] == 3)\n",
-    "print(c.data_[2] == 4)\n",
-    "print(c.data_[3] == 5)\n",
-    "print(c.data_[4] == None)\n",
-    "print(c.data_[5] == None)\n",
-    "print(c.data_[6] == None)\n",
-    "print(c.data_[7] == None)\n",
-    "print(c.size() == 4)\n",
-    "c.popLast()\n",
-    "print(c.data_[0] == 2)\n",
-    "print(c.data_[1] == 3)\n",
-    "print(c.data_[2] == 4)\n",
-    "print(c.data_[3] == None)\n",
-    "print(c.data_[4] == None)\n",
-    "print(c.data_[5] == None)\n",
-    "print(c.data_[6] == None)\n",
-    "print(c.data_[7] == None)\n",
-    "print(c.size() == 3)\n",
-    "print(c.__getitem__(0) == 2)\n",
-    "print(c.__getitem__(1) == 3)\n",
-    "print(c.__getitem__(2) == 4)\n",
-    "c.__setitem__(0,100)\n",
-    "print(c.first() == 100)\n",
-    "print(c.last() == 4)\n"
+    "        for idx, fieldItem in enumerate(self.data_):\n",
+    "            print('item at', idx, fieldItem, None == fieldItem)\n",
+    "            if fieldItem == None:\n",
+    "                return self.data_[idx - 1]\n",
+    "\n"
    ]
   },
   {
@@ -4251,7 +4137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -4270,20 +4156,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[None]\n",
-      "0 None\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'UniversalContainer' object has no attribute 'data'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-29-538b45284e1c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcapacity\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpush\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpush\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpush\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-28-397e228071c3>\u001b[0m in \u001b[0;36mpush\u001b[0;34m(self, item)\u001b[0m\n\u001b[1;32m     25\u001b[0m                 \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     28\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize_\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'UniversalContainer' object has no attribute 'data'"
+      "item at 0 100 False\n",
+      "item at 1 3 False\n",
+      "item at 2 4 False\n",
+      "item at 3 None True\n"
      ]
     }
    ],
